--- a/src/emby-for-roku.html
+++ b/src/emby-for-roku.html
@@ -425,8 +425,44 @@
                 <div class="l-submain-h g-html i-cf">
                     <div class="g-cols wpb_row offset_wide">
                         <div class="two-thirds">
-                            <div id="gallery_253349" class="w-gallery columns_2 type_masonry with_indents animate_revealgrid"> <div class="w-gallery-tnails" style="position: relative; height: 371px;"><a class="w-gallery-tnail order_1" href="resources/mzl.bwcuqfud.png" title="mzl.bwcuqfud" style="opacity: 1; position: absolute; left: 0px; top: 0px;"><img width="600" height="600" src="resources/mzl.bwcuqfud-600x600.png" class="w-gallery-tnail-img" alt="mzl.bwcuqfud"><span class="w-gallery-tnail-title"></span></a></div> </div>
-                        </div><div class="one-third">
+                            <div class="wpb_wrapper">
+                                
+                                <h2>Smart Home Screen</h2>
+                                    <p><span style='font-size: 18px'>Find what you want quickly and easily with a smart home screen design as well as individualized displays for each media type. Or use the full search capabilities.</span></p>                            
+
+                                    <p><span rel='lightbox'><img class='bbc_img' src='https://emby.media/community/uploads/inline/3/591d95978f3cd_home1.jpg' alt='Posted Image' /></span></p>
+
+
+                                    <p><span rel='lightbox'><img class='bbc_img' src='https://emby.media/community/uploads/inline/3/591d95aa1ee41_home2.jpg' alt='Posted Image' /></span></p>
+
+                                    <h2>Easy Browsing</h2>
+                                    <p><span style='font-size: 18px'>Or browse your TV and Movie collections with ease with smart library landing pages and grid views as well as search integration. </p>
+
+                                    <p><span rel='lightbox'><img class='bbc_img' src='https://emby.media/community/uploads/inline/3/591d95cd349f6_library1.jpg' alt='Posted Image' /></span><span rel='lightbox'><img class='bbc_img' src='https://emby.media/community/uploads/inline/3/591d95ece8155_moviesgrid.jpg' alt='Posted Image' /></span></p>
+
+                                    <h2>See All the Details</h2>
+                                    <p><span style='font-size: 18px'>A beautiful detail screen presentation allows you access to all the information for a particular item as well as cast, related content and suggestions.</p>
+
+                                     <p><span rel='lightbox'><img class='bbc_img' src='https://emby.media/community/uploads/inline/3/591d9606291bb_moviedetail1.jpg' alt='Posted Image' /></span>
+
+                                    <span rel='lightbox'><img class='bbc_img' src='https://emby.media/community/uploads/inline/3/591d9627b13da_albumdetail2.jpg' alt='Posted Image' /></span></p>
+
+                                    <h2>Hear the Music</h2>
+                                    <p><span style='font-size: 18px'>Emby for Roku is designed for your music collection. Queue items, shuffle play, instant mix and move freely among the queue.</p>
+
+                                    <p><span rel='lightbox'><img class='bbc_img' src='https://emby.media/community/uploads/inline/3/591d9644ec63a_audioplayer1.jpg' alt='Posted Image' /></span></p>
+
+                                    <span rel='lightbox'><img class='bbc_img' src='https://emby.media/community/uploads/inline/3/591d96566ca78_audioss2.jpg' alt='Posted Image' /></span>
+
+                                     <h2>Watch it Live</h2>
+                                    <p><span style='font-size: 18px'>Emby for Roku also gives you easy access to Live TV (with supported hardware and configuration and an <a href="premiere.html">Emby Premiere</a> subscription) with a full, graphical guide.</p>
+
+                                    <p><span rel='lightbox'><img class='bbc_img' src='https://emby.media/community/uploads/inline/3/591d96d77922d_tvguide1.jpg' alt='Posted Image' /></span></p>
+
+                           </div>
+                        </div>
+
+                        <div class="one-third">
                             <div class="wpb_text_column ">
                                 <div class="wpb_wrapper">
 
@@ -439,9 +475,9 @@
                                         <a href="https://github.com/MediaBrowser/Wiki/wiki/Roku" target="_blank">Emby for Roku Wiki</a>
                                     </div>
 
-                                    <h4>Try the Beta Preview of the new Emby for Roku App</h4>
+                                    <h4>Want to help test and shape the future of Emby for Roku?</h4>
                                     <div style="margin-top:1em;">
-                                        The preview of our brand new modern interface Roku app can be installed as a <a href="https://my.roku.com/add/EmbyBeta" target="_blank">private channel</a> on your compatible Roku device (firmware 7.5+)
+                                        Install the beta <a href="https://my.roku.com/add/EmbyBeta" target="_blank">private channel</a> on your compatible Roku device (firmware 7.5+)
                                     </div>
 
                                 </div>
