--- a/src/freebsd-server.html
+++ b/src/freebsd-server.html
@@ -466,6 +466,7 @@
                                                 pkg install `make build-depends-list | tr '\n' ' ' | sed 's/\/usr\/ports\///g' | sed 's/audio\/lame //g'`<br>
                                                 make config<br>
                                                 # enable the lame option<br>
+                                                # enable the SMB option<br>
                                                 # enable the ass subtitles option<br>
                                                 # enable the opus subtitles option<br>
                                                 # enable the x265 subtitles option<br>
