--- a/src/nas-server.html
+++ b/src/nas-server.html
@@ -495,7 +495,7 @@
                                         <div class="w-tabs-section-content-h i-cf">
                                             <div class="wpb_text_column ">
                                                 <div class="wpb_wrapper">
-                                                    <p>– Install the MediaBrowser plugin using the FreeNAS web interface</p>
+                                                    <p>– Install the Emby plugin using the FreeNAS web interface</p>
                                                     <p>– Start the server using the FreeNAS web interface</p>
                                                     <p>– You may need to configure storage within your FreeNAS Jail in order to allow Emby to access it. See <a target="_blank" href="http://doc.freenas.org/9.3/freenas_jails.html#add-storage">Adding storage to FreeNAS.</a></p>
                                                     <span class="wpb_button align_left"><a href="https://emby.media/community/index.php?/topic/13083-freenas-plugin" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-info-circle"></i><span>More Information</span><span class="ripple-container"></span></a></span>
