update cover art

--- a/src/premiere-ext.html
+++ b/src/premiere-ext.html
@@ -616,7 +616,7 @@
                                                 <img class="img-icon" alt="" src="resources/coverart1.png">
                                             </div>
                                         </div>
-                                    </div><div class="aio-icon-header"><h3 class="aio-icon-title" style="">Cover Art*</h3></div> <!-- header --><div class="aio-icon-description" style="">The Cover Art plugin creates fun covers and other treatments for your media images. Choose from over 30 different styles of treatments and overlays for 3D, subtitles, audio, and more.</div> <!-- description -->
+                                    </div><div class="aio-icon-header"><h3 class="aio-icon-title" style="">Cover Art</h3></div> <!-- header --><div class="aio-icon-description" style="">The Cover Art plugin creates fun covers and other treatments for your media images. Choose from over 30 different styles of treatments and overlays for 3D, subtitles, audio, and more.</div> <!-- description -->
                                 </div> <!-- aio-icon-box -->
                             </div> <!-- aio-icon-component -->
                         </div>
@@ -761,7 +761,6 @@
                         </div>
                     </div>
 
-                    <p>*Cover Art is currently not supported on Emby Server for OSX.</p>
                     <!-- Row Backgrounds -->
                     <div class="upb_no_bg" data-fadeout="" data-fadeout-percentage="30" data-parallax-content="" data-parallax-content-sense="30" data-row-effect-mobile-disable="true" data-img-parallax-mobile-disable="true" data-rtl="false" data-custom-vc-row="" data-vc="4.5.2" data-theme-support=""></div>
                     <div class="g-cols wpb_row offset_wide">
