--- a/src/premiere.html
+++ b/src/premiere.html
@@ -404,6 +404,7 @@
                 <div class="l-submain-h g-html i-cf">
                     <div class="w-pagehead">
                         <h1>Emby Premiere</h1>
+                        <h2 style="color: red">Act Fast and Save 20%</h2>
                         <p>Enjoy additional features to enhance your personal media experience.</p>
                     </div>
                 </div>
@@ -520,7 +521,7 @@
                                     </div> <!-- header -->
                                     <div class="aio-icon-description" style="">
                                         <p>
-                                            $99.99/One-time<br>
+                                            <span style="color:red">SALE </span><span style="text-decoration: line-through">$119</span> $99.99/One-time<br>
                                         </p>
                                         <div class="vc_wp_text wpb_content_element">
                                             <div class="widget widget_text">
@@ -875,7 +876,7 @@
                                         </div>
                                     </div><div class="aio-icon-header"><h3 class="aio-icon-title" style="">Lifetime</h3></div> <!-- header --><div class="aio-icon-description" style="">
                                         <p>
-                                            $99.99/One-time<br>
+                                            <span style="color:red">SALE </span><span style="text-decoration: line-through">$119</span> $99.99/One-time<br>
                                         </p><div class="vc_wp_text wpb_content_element">
                                             <div class="widget widget_text">
                                                 <div class="textwidget">
