Add Alexa to features

--- a/src/premiere.html
+++ b/src/premiere.html
@@ -774,7 +774,23 @@
                                 </div> <!-- aio-icon-box -->
                             </div> <!-- aio-icon-component -->
                         </div>
-                    </div>
+                        <div class="one-third">
+                            <div class="aio-icon-component   style_2">
+                                <div class="aio-icon-box top-icon" style="">
+                                    <div class="aio-icon-top">
+                                        <div class="ult-just-icon-wrapper ">
+                                            <div class="aio-icon-img " style="font-size: 160px; display: inline-block;">
+                                                <img class="img-icon" alt="" src="resources/alexa.jpg">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="aio-icon-header">
+                                        <h3 class="aio-icon-title" style="">Amazon Alexa</h3>
+                                    </div> <!-- header -->
+                                    <div class="aio-icon-description" style="">Use your Amazon Echo device to control your Emby apps by voice!  Just say "Alexa, ask Emby to play the next episode of Game of Thrones" and sit back and enjoy.</div> <!-- description -->
+                                </div> <!-- aio-icon-box -->
+                            </div> <!-- aio-icon-component -->
+                        </div>                    </div>
 
                     <!-- Row Backgrounds -->
                     <div class="upb_no_bg" data-fadeout="" data-fadeout-percentage="30" data-parallax-content="" data-parallax-content-sense="30" data-row-effect-mobile-disable="true" data-img-parallax-mobile-disable="true" data-rtl="false" data-custom-vc-row="" data-vc="4.5.2" data-theme-support=""></div>
