--- a/src/emby-for-android-mobile.html
+++ b/src/emby-for-android-mobile.html
@@ -430,10 +430,10 @@
                                     </div>
                                     <h2>Download the Apk</h2>
                                     <div>
-                                        <a href="https://github.com/MediaBrowser/Emby.Releases/raw/master/android/android-googlearmv7-release.apk">arm7</a>
+                                        <a href="https://github.com/MediaBrowser/Emby.Releases/raw/master/android/MediaBrowser.Mobile-googlearmv7-release.apk">arm7</a>
                                     </div>
                                     <div>
-                                        <a href="https://github.com/MediaBrowser/Emby.Releases/raw/master/android/android-googlex86-release.apk">x86</a>
+                                        <a href="https://github.com/MediaBrowser/Emby.Releases/raw/master/android/MediaBrowser.Mobile-googlex86-release.apk">x86</a>
                                     </div>
                                     <br />
                                     <div>
