--- a/src/alexalogin.html
+++ b/src/alexalogin.html
@@ -431,12 +431,13 @@
                                             </form>
                                             <form id="selectServerForm" style="margin: 0 auto; width: 100%; max-width: 400px; display: none;">
 
-                                                <label style="text-align: left; display: block;margin-bottom:2em;">
+                                                <label style="text-align: left; display: block;">
 
                                                     <div>Server to control with Alexa:</div>
                                                     <select style="width: 100%;" id="selectServer" required></select>
 
                                                 </label>
+                                                <div style="color:#444;margin-top:.5em;margin-bottom:2em;">Server not listed? Set your server up with Emby Connect.</div>
 
                                                 <p>
                                                     <button class="g-btn color_primary type_raised size_big" type="submit" style="display: block; margin-top: 30px; width: 100%;">Link to Alexa<span class="ripple-container"></span></button><br>
