--- a/src/emby-for-roku.html
+++ b/src/emby-for-roku.html
@@ -426,40 +426,42 @@
                     <div class="g-cols wpb_row offset_wide">
                         <div class="two-thirds">
                             <div class="wpb_wrapper">
-                                
+
                                 <h2>Smart Home Screen</h2>
-                                    <p><span style='font-size: 18px'>Find what you want quickly and easily with a smart home screen design as well as individualized displays for each media type. Or use the full search capabilities.</span></p>                            
+                                <p><span style='font-size: 18px'>Find what you want quickly and easily with a smart home screen design as well as individualized displays for each media type. Or use the full search capabilities.</span></p>
 
-                                    <p><span rel='lightbox'><img class='bbc_img' src='https://emby.media/community/uploads/inline/3/591d95978f3cd_home1.jpg' alt='Posted Image' /></span></p>
+                                <p><span rel='lightbox'><img class='bbc_img' src='resources/rokuhome1.jpg' alt='Posted Image' /></span></p>
 
 
-                                    <p><span rel='lightbox'><img class='bbc_img' src='https://emby.media/community/uploads/inline/3/591d95aa1ee41_home2.jpg' alt='Posted Image' /></span></p>
+                                <p><span rel='lightbox'><img class='bbc_img' src='resources/rokuhome2.jpg' alt='Posted Image' /></span></p>
 
-                                    <h2>Easy Browsing</h2>
-                                    <p><span style='font-size: 18px'>Or browse your TV and Movie collections with ease with smart library landing pages and grid views as well as search integration. </p>
+                                <h2>Easy Browsing</h2>
+                                <p><span style='font-size: 18px'>Or browse your TV and Movie collections with ease with smart library landing pages and grid views as well as search integration.</span> </p>
 
-                                    <p><span rel='lightbox'><img class='bbc_img' src='https://emby.media/community/uploads/inline/3/591d95cd349f6_library1.jpg' alt='Posted Image' /></span><span rel='lightbox'><img class='bbc_img' src='https://emby.media/community/uploads/inline/3/591d95ece8155_moviesgrid.jpg' alt='Posted Image' /></span></p>
+                                <p><span rel='lightbox'><img class='bbc_img' src='resources/rokulibrary1.jpg' alt='Posted Image' /></span><span rel='lightbox'><img class='bbc_img' src='resources/rokulibrary2.jpg' alt='Posted Image' /></span></p>
 
-                                    <h2>See All the Details</h2>
-                                    <p><span style='font-size: 18px'>A beautiful detail screen presentation allows you access to all the information for a particular item as well as cast, related content and suggestions.</p>
+                                <h2>See All the Details</h2>
+                                <p><span style='font-size: 18px'>A beautiful detail screen presentation allows you access to all the information for a particular item as well as cast, related content and suggestions.</p>
 
-                                     <p><span rel='lightbox'><img class='bbc_img' src='https://emby.media/community/uploads/inline/3/591d9606291bb_moviedetail1.jpg' alt='Posted Image' /></span>
+                                <p>
+                                    <span rel='lightbox'><img class='bbc_img' src='https://emby.media/community/uploads/inline/3/591d9606291bb_moviedetail1.jpg' alt='Posted Image' /></span>
 
-                                    <span rel='lightbox'><img class='bbc_img' src='https://emby.media/community/uploads/inline/3/591d9627b13da_albumdetail2.jpg' alt='Posted Image' /></span></p>
+                                    <span rel='lightbox'><img class='bbc_img' src='https://emby.media/community/uploads/inline/3/591d9627b13da_albumdetail2.jpg' alt='Posted Image' /></span>
+                                </p>
 
-                                    <h2>Hear the Music</h2>
-                                    <p><span style='font-size: 18px'>Emby for Roku is designed for your music collection. Queue items, shuffle play, instant mix and move freely among the queue.</p>
+                                <h2>Hear the Music</h2>
+                                <p><span style='font-size: 18px'>Emby for Roku is designed for your music collection. Queue items, shuffle play, instant mix and move freely among the queue.</p>
 
-                                    <p><span rel='lightbox'><img class='bbc_img' src='https://emby.media/community/uploads/inline/3/591d9644ec63a_audioplayer1.jpg' alt='Posted Image' /></span></p>
+                                <p><span rel='lightbox'><img class='bbc_img' src='https://emby.media/community/uploads/inline/3/591d9644ec63a_audioplayer1.jpg' alt='Posted Image' /></span></p>
 
-                                    <span rel='lightbox'><img class='bbc_img' src='https://emby.media/community/uploads/inline/3/591d96566ca78_audioss2.jpg' alt='Posted Image' /></span>
+                                <span rel='lightbox'><img class='bbc_img' src='https://emby.media/community/uploads/inline/3/591d96566ca78_audioss2.jpg' alt='Posted Image' /></span>
 
-                                     <h2>Watch it Live</h2>
-                                    <p><span style='font-size: 18px'>Emby for Roku also gives you easy access to Live TV (with supported hardware and configuration and an <a href="premiere.html">Emby Premiere</a> subscription) with a full, graphical guide.</p>
+                                <h2>Watch it Live</h2>
+                                <p><span style='font-size: 18px'>Emby for Roku also gives you easy access to Live TV (with supported hardware and configuration and an <a href="premiere.html">Emby Premiere</a> subscription) with a full, graphical guide.</p>
 
-                                    <p><span rel='lightbox'><img class='bbc_img' src='https://emby.media/community/uploads/inline/3/591d96d77922d_tvguide1.jpg' alt='Posted Image' /></span></p>
+                                <p><span rel='lightbox'><img class='bbc_img' src='https://emby.media/community/uploads/inline/3/591d96d77922d_tvguide1.jpg' alt='Posted Image' /></span></p>
 
-                           </div>
+                            </div>
                         </div>
 
                         <div class="one-third">
