Expose extended subscription options

--- a/src/premiere.html
+++ b/src/premiere.html
@@ -418,6 +418,7 @@
                                 <div class="wpb_wrapper">
 
                                     <h1 style="text-align: center;">License Options</h1>
+                                    <p style="text-align: center;">The following licenses are for single household use and carry a 15 device limit.  If you plan to support more devices please see our <a href="premiere-ext.html">Extended Premiere Options</a>.</p>
                                     <p></p>
                                 </div>
                             </div>
@@ -810,6 +811,7 @@
                                 <div class="wpb_wrapper">
 
                                     <h1 style="text-align: center;">License Options</h1>
+                                    <p style="text-align: center;">The following licenses are for single household use and carry a 15 device limit.  If you plan to support more devices please see our <a href="premiere-ext.html">Extended Premiere Options</a>.</p>
                                     <p></p>
                                 </div>
                             </div>
