Fix some descriptions

--- a/src/premiere-ext.html
+++ b/src/premiere-ext.html
@@ -511,7 +511,7 @@
                                                         <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=EE6XAJNSGWSJL"><img src="resources/checkout-logo-medium.png" alt="Check out with PayPal"></a>
                                                     </p>
                                                     <form style="margin-top: -20px;" action="https://mb3admin.com/admin/service/stripe/process" method="POST">
-                                                        <script class="stripe-button" src="https://checkout.stripe.com/checkout.js" data-key="pk_live_lVflUNchyMpL5tkBP5dVPTlv" data-image="https://emby.media/community/uploads/monthly_10_2015/msg-3-0-40073400-1443887227_thumb.png" data-name="Emby" data-description="Premiere 100 Yearly" data-amount="1999" data-locale="auto" data-zip-code="true">
+                                                        <script class="stripe-button" src="https://checkout.stripe.com/checkout.js" data-key="pk_live_lVflUNchyMpL5tkBP5dVPTlv" data-image="https://emby.media/community/uploads/monthly_10_2015/msg-3-0-40073400-1443887227_thumb.png" data-name="Emby" data-description="Premiere 75 Monthly" data-amount="1999" data-locale="auto" data-zip-code="true">
                                                             // <![CDATA[
 
                                                             // ]]></script>
@@ -748,7 +748,7 @@
                                                         <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=8ZVXTCUPWYJJQ"><img src="resources/checkout-logo-medium.png" alt="Check out with PayPal"></a>
                                                     </p>
                                                     <form style="margin-top: -20px;" action="https://mb3admin.com/admin/service/stripe/process" method="POST">
-                                                        <script class="stripe-button" src="https://checkout.stripe.com/checkout.js" data-key="pk_live_lVflUNchyMpL5tkBP5dVPTlv" data-image="https://emby.media/community/uploads/monthly_10_2015/msg-3-0-40073400-1443887227_thumb.png" data-name="Emby" data-description="Premiere 100 Yearly" data-amount="1199" data-locale="auto" data-zip-code="true">
+                                                        <script class="stripe-button" src="https://checkout.stripe.com/checkout.js" data-key="pk_live_lVflUNchyMpL5tkBP5dVPTlv" data-image="https://emby.media/community/uploads/monthly_10_2015/msg-3-0-40073400-1443887227_thumb.png" data-name="Emby" data-description="Premiere 75 Monthly" data-amount="1199" data-locale="auto" data-zip-code="true">
                                                             // <![CDATA[
 
                                                             // ]]></script>
