update asustor info

--- a/src/nas-server.html
+++ b/src/nas-server.html
@@ -486,8 +486,9 @@
                                     <div class="w-tabs-section-header"><div class="w-tabs-section-icon"><i class=""></i></div><h5 class="w-tabs-section-title">ASUSTOR</h5><div class="w-tabs-section-control"><i class="mdfi_hardware_keyboard_arrow_down"></i></div></div><div class="w-tabs-section-content" style="">
                                         <div class="w-tabs-section-content-h i-cf">
                                             <div><strong>Installation</strong></div>
-                                            <div>– Install Emby Server from App Central on the ASUSTOR NAS web page</div>
-                                            <div>– Install Mono and X.org using App Central</div>
+                                            <p>– Download and install one of the .apk files depending on the architecture of your NAS device.</p>
+                                            <p>– <a href="https://github.com/MediaBrowser/Emby/releases/download/3.2.30.25/embyserver-asustor-x64-3.2.30.25.apk">x86-x64 download</a></p>
+                                            <p>– arm download- coming soon.</p>
                                             <div>– Start the server from the ASUSTOR web page</div>
                                             <div><strong>Run Setup Wizard</strong></div>
                                             <p>Visit http://localhost:8096</p>
