--- a/src/mac-server.html
+++ b/src/mac-server.html
@@ -422,7 +422,7 @@
                                         <h2>Installation</h2>
                                         <p>
                                             <strong>Download</strong><br>
-                                            Download and run the <a href="https://github.com/MediaBrowser/MediaBrowser.Releases/raw/master/Server/Emby.Server.Mac.pkg" onclick="ga('send', 'event', 'Download Links', 'Downloaded', 'MacRelease');">installer.</a>
+                                            Download and run the <a href="https://github.com/MediaBrowser/Emby/releases/download/3.2.31.0/Emby.Server.Mac.pkg" onclick="ga('send', 'event', 'Download Links', 'Downloaded', 'MacRelease');">installer.</a>
                                         </p>
                                         <p>
                                             <strong>Start the Server</strong><br>
