update windows link

--- a/src/windows-server.html
+++ b/src/windows-server.html
@@ -319,14 +319,14 @@
         }
         /** Ultimate: Media Responsive - **/
     </style>
-	<script>
-	
-	function showBetaMessage(){
-	
-		alert('Thank you for choosing to participate in testing Emby Server Beta releases. Please note we do not recommend switching the same Emby Server installation between release channels. If you decide to switch to Stable, we recommend a fresh installation.');
-	}
-	
-	</script>
+    <script>
+
+        function showBetaMessage() {
+
+            alert('Thank you for choosing to participate in testing Emby Server Beta releases. Please note we do not recommend switching the same Emby Server installation between release channels. If you decide to switch to Stable, we recommend a fresh installation.');
+        }
+
+    </script>
 </head>
 <body class="single single-us_portfolio postid-5076 l-body us-theme_zephyr_1-6 wpb-js-composer js-comp-ver-4.5.2 vc_responsive hasGoogleVoiceExt">
     <!-- CANVAS -->
@@ -431,7 +431,7 @@
                                         <h2 style="margin-top:0;">Portable Installation</h2>
                                         <p>
                                             - Download and install the <a href="https://www.microsoft.com/en-us/download/details.aspx?id=53344" target="_blank">Microsoft .NET Framework 4.62</a> (already included with Windows 10).
-                                            <br />- Download and unzip <a href="https://github.com/MediaBrowser/Emby/releases/latest" target="_blank">emby.windows.zip from the latest Github release.</a>
+                                            <br />- Download and unzip <a href="https://github.com/MediaBrowser/Emby/releases/download/3.2.31.0/emby.windows.zip">emby.windows.zip.</a>
                                             <br />- Run MediaBrowser.ServerApplication.exe from within the System sub-folder
                                             <br />- Run the Emby Server setup wizard by visiting http://localhost:8096
                                         </p>
