--- a/src/windows-server.html
+++ b/src/windows-server.html
@@ -428,11 +428,12 @@
                                             <strong>Complete the Server Setup Wizard</strong><br />
                                             The server will attempt to launch the web-based setup wizard in your default browser. If this does not happen, simply open your browser and visit http://localhost:8096
                                         </p>
-                                        <h2 style="margin-top:0;">Portable Installation</h2>
+                                        <h2 style="margin-top:0;margin-bottom:0em;">Portable Installation</h2>
                                         <p>
-                                            - Download and install the <a href="https://www.microsoft.com/en-us/download/details.aspx?id=53344" target="_blank">Microsoft .NET Framework 4.62</a> (already included with Windows 10).
-                                            <br />- Download and unzip <a href="https://github.com/MediaBrowser/Emby/releases/download/3.2.33.0/emby.windows.zip">emby.windows.zip.</a>
-                                            <br />- Run MediaBrowser.ServerApplication.exe from within the System sub-folder
+                                            <br />- Download and unzip one of the following zip files depending on system architecture:
+                                            <br /><a href="https://github.com/MediaBrowser/Emby/releases/download/3.2.33.0/embyserver-win-x64-3.2.33.0.7z">Windows x64</a>
+                                            <br /><a href="https://github.com/MediaBrowser/Emby/releases/download/3.2.33.0/embyserver-win-x86-3.2.33.0.7z">Windows x86</a>
+                                            <br />- Run EmbyServer.exe from within the System sub-folder
                                             <br />- Run the Emby Server setup wizard by visiting http://localhost:8096
                                         </p>
                                     </div>
