Update MacOS instructions

--- a/src/mac-server.html
+++ b/src/mac-server.html
@@ -422,15 +422,23 @@
                                         <h2>Installation</h2>
                                         <p>
                                             <strong>Download</strong><br>
-                                            Download and run the <a href="https://github.com/MediaBrowser/Emby/releases/download/3.2.33.0/Emby.Server.Mac.pkg" onclick="ga('send', 'event', 'Download Links', 'Downloaded', 'MacRelease');">installer.</a>
+                                            Download <a href="https://github.com/MediaBrowser/Emby/releases/download/3.2.33.9/embyserver-osx-x64-3.2.33.9.zip" onclick="ga('send', 'event', 'Download Links', 'Downloaded', 'MacRelease');">Emby Server for MacOS</a>.
                                         </p>
                                         <p>
-                                            <strong>Start the Server</strong><br>
-                                            Use the Finder to locate Emby.Server.Mac and run the application.
+                                            <strong>Drag to Applications Folder</strong><br>
+                                            After the download has completed, use Finder to drag EmbyServer from your Downloads folder to your Applications folder.
+                                            <img src="server/mac1.png"/>
                                         </p>
                                         <p>
-                                            <strong>Complete the Server Setup Wizard</strong><br>
-                                            The server will attempt to launch the web-based setup wizard in your default browser. If this does not happen, simply open your browser and visit http://localhost:8096
+                                            <strong>Start Emby Server</strong><br>
+                                            Start Emby Server from your Applications menu like any other Application.
+                                            <img src="server/mac2.png" />
+                                            <br/>If you're unable to start due to a message about unidentified developer, start Emby Server by clicking the settings icon, then Open.
+                                            <img src="server/mac3.png" />
+                                        </p>
+                                        <p>
+                                            <strong>Complete the Emby Server Setup Wizard</strong><br>
+                                            Open your web browser and visit http://localhost:8096
                                         </p>
                                     </div>
                                 </div>
