update kodi page

--- a/src/emby-for-kodi.html
+++ b/src/emby-for-kodi.html
@@ -412,7 +412,7 @@
                 <div class="l-submain-h g-html i-cf">
                     <div class="w-pagehead">
                         <h1>Emby for Kodi</h1>
-                        <p>Emby for Kodi is an add-on to enable connectivity to your Emby library within Kodi.</p>								<div class="w-pagehead-nav">
+                        <div class="w-pagehead-nav">
                             <div class="w-pagehead-nav-h">
                                 <a class="w-pagehead-nav-item type_prev" href="mac-server.html" title="Emby Server for Mac"><i class="mdfi_navigation_chevron_left"></i></a>
                                 <a class="w-pagehead-nav-item type_next" href="freebsd-server.html" title="Emby Server for FreeBSD"><i class="mdfi_navigation_chevron_right"></i></a>
@@ -428,30 +428,21 @@
                             <div class="wpb_text_column ">
                                 <div class="wpb_wrapper">
 
-                                    <h2>Installation Instructions</h2>
-                                    <p>
-                                        Open the Kodi file manager:<br>
-                                        <img src="resources/kodiinstall1.png" />
-                                    </p>
+                                    <h2>Access Your Emby Library Using Kodi</h2>
 
-                                    <p>
-                                        Add a source with the name Emby and url http://kodi.emby.media:<br>
-                                        <img src="resources/kodiinstall2.png" /><img src="resources/kodiinstall3.png" />
-                                    </p>
+                                    <p>There are many ways to browse your Emby library using Kodi. Here are two of them.</p>
+                                    <h2>Install the EmbyCon Add-on</h2>
+                                    <p>Just install the EmbyCon Add-on from the Offical Kodi Add-On Repository and you can connect directly to your Emby Server. EmbyCon lets you easily browse and play your Emby library using Kodi.</p>
 
-                                    <p>
-                                        Navigate to System -> Add-ons -> Install from zip. Install the emby.kodi repository and you're done!<br>
-                                        <img src="resources/kodiinstall4.png" /><img src="resources/kodiinstall5.png" />
-                                    </p>
+                                    <h2>Or Use the Emby for Kodi Sync Add-On</h2>
+                                    <p>The Emby for Kodi sync add-on has a richer feature set than EmbyCon, but requires a periodic syncing process to download data from your Emby Server. This syncing process can take a little while and may result in increased CPU and memory consumption on your Emby Server.</p>
+                                    <p>Installation instructions can be found on our <a target="_blank" href="https://github.com/MediaBrowser/plugin.video.emby/wiki/Emby-Repository">Emby for Kodi wiki.</a></p>
 
                                 </div>
                             </div>
                         </div>
                     </div><!-- Row Backgrounds --><div class="upb_no_bg" data-fadeout="" data-fadeout-percentage="30" data-parallax-content="" data-parallax-content-sense="30" data-row-effect-mobile-disable="true" data-img-parallax-mobile-disable="true" data-rtl="false" data-custom-vc-row="" data-vc="4.5.2" data-theme-support=""></div>
-                    <div style="margin:2em 0;">
-                        <span class="wpb_button align_left"><a href="https://emby.media/community/index.php?/topic/21888-emby-for-kodi-liv-stable/" target="_blank" class="g-btn color_primary type_raised"><span>Learn More</span><span class="ripple-container"></span></a></span>
-
-                    </div>
+                    <br />
                     <div class="g-cols wpb_row offset_wide">
                         <div class="full-width">
 
